# HE_GPU

./: Addition.cuh  Barret.cuh  CMakeLists.txt  CPU_GPU_128.cuh  Context_Pool.cuh  Decryption.cuh  Encode_Decode.cuh  Encryption.cuh  GPU_Context.cuh  Key_Generation.cuh  LICENSE  Lib.cuh  Main.cu  Multiplication.cuh  NTT.cuh  NTTx.cuh  README.md  Switch_Key.cuh  uint128.h
native/bench/: HE_bench1.cu
native/src/: CMakeLists.txt  common.cuh  context.cu  context.cuh  contextpool.cu  contextpool.cuh  decryptor.cu  decryptor.cuh  encoder.cu  encoder.cuh  encryptor.cu  encryptor.cuh  keygeneration.cu  keygeneration.cuh  modular_arith.cuh  operator.cu  operator.cuh
native/src/gpu_kernels/: CMakeLists.txt  addition.cu  addition.cuh  decryption.cu  decryption.cuh  encoding.cu  encoding.cuh  encryption.cu  encryption.cuh  multiplication.cu  multiplication.cuh  ntt.cu  ntt.cuh  ntt_old.cuh  nttparameters.cuh  switchkey.cu  switchkey.cuh
native/test/: HE_test1.cu  HE_test2.cu
